[project]
name = "neo4jalchemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AbdullaK123", email = "abdullamaseeh123@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
