[project]
name = "neo4jalchemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AbdullaK123", email = "abdullamaseeh123@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.28.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

# Fix the asyncio deprecation warning
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests",
]